2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/16_mod_float_float.deca
// Description :
//      opération modulo entre deux floats
// Resultats :
//    Erreur Contexteulle : ligne 15 : l'opération % n'est pas possible entre 'float' et 'float'
//
// Historique :
// cree le 10/01/2024


{
    float f1 = 1.0 ;
    float f2 = 2.0 ;


    int x = f1%f2;
}